<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingTop="30dp"
    android:paddingRight="12dp"
    tools:context="com.jumptuck.recipebrowser2.settings.SettingsFragment">

    <TextView
        android:id="@+id/dialog_hostname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint_uri" />

    <EditText
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/dialog_example_host"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/dialog_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint_user" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:hint="@string/dialog_optional"
        android:inputType="text" />

    <TextView
        android:id="@+id/dialog_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:fontFamily="sans-serif"
        android:hint="@string/dialog_optional"
        android:inputType="textPassword" />
</LinearLayout>